# Project2

./: .gitignore  GamePlan.txt  OllieTest  README.md  pyproject.toml  requirements.txt
configs/: data.yaml  env.yaml  regimes.yaml
data/interim/: btcusdt_5m.parquet
data/processed/: btcusdt_5m.parquet
data/raw/: btcusdt_5m.csv  fag
experiments/: exp001_baselines.yaml  exp010_dqn_v1.yaml  exp_qlearn.yaml
notebooks/: 01_env_smoketest.ipynb  wasserstein_smoketest.ipynb
results/artifacts/: emabaselineagent.json  exp001.json  qlearningpolicyagent.json
results/artifacts/dqn_v1/: dqn.pt
results/artifacts/qlearn_20251005_201411/: q_table.pkl  training_diagnostics.json  training_log.csv
results/artifacts/qlearn_20251005_210553/: q_table.pkl  training_diagnostics.json  training_log.csv
results/artifacts/qlearn_20251005_211231/: q_table.pkl  training_diagnostics.json  training_log.csv
results/artifacts/qlearn_20251005_211613/: q_table.pkl  training_diagnostics.json  training_log.csv
results/artifacts/qlearn_20251005_211906/: q_table.pkl  training_diagnostics.json  (+1 more)
scripts/: run_backtest.py  run_data_pipeline.py  run_dqn_backtest.py  run_qlearn_train.py  run_regime_fit.py  run_train_dqn.py  run_wasserstein.py
src/agents/: baselines.py  dqn.py  q_learning.py
src/data_pipeline/: clean.py  features.py  ingest.py
src/env/: portfolio.py  render_utils.py  trading_env.py
src/evaluation/: metrics.py  plots.py
src/regimes/: wasserstein_features.py
src/utils/: io.py  logging.py  wasserstein.py
tests/: test_baseline.py  test_dqn_diagnostics.py  test_wasserstein.py
trader_venv/: pyvenv.cfg
(+21 files in other folders)
