[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
version = "0.1.0"
description = "Regime-aware RL trading framework"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "pyarrow",
    "pyyaml",
    "ccxt",
    "gymnasium",
    "pytest"
]

[tool.setuptools]
packages = ["src"]
